fix overflow y

--- a/assets/style.css
+++ b/assets/style.css
@@ -173,6 +173,7 @@ a {
 	justify-content: center;
 	height: 100vh;
 	align-items: center;
+	overflow-x: hidden;
 }
 
 .wrapper-fixed {
